@@ -56,7 +56,7 @@ public class DefectDaoImpl implements DefectDao {
 	public void delete(RestRequest request, RestResponse response) throws Exception {
 		if (request.containsParam(GlobalConstant.ITEMID) && !"".equals(request.getParam(GlobalConstant.ITEMID))) {
 			
-			Defect defect = (Defect) entityManagerDataSvc.getInstance().getReference(Defect.class,  new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
+			Defect defect = (Defect) entityManagerDataSvc.getInstance().getReference(Defect.class,  Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
 			entityManagerDataSvc.getInstance().remove(defect);
 			
 		} else {
@@ -69,28 +69,28 @@ public class DefectDaoImpl implements DefectDao {
 		Defect defect = (Defect) request.getParam(GlobalConstant.ITEM);
 		
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			Product product = (Product) entityManagerDataSvc.getInstance().getReference(Product.class,  new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
-			if (defect.getProduct() == null || defect.getProduct() != null && !defect.getProduct().getId().equals(new Long((Integer) request.getParam(PMConstant.PRODUCTID)))) {
+			Product product = (Product) entityManagerDataSvc.getInstance().getReference(Product.class,  Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
+			if (defect.getProduct() == null || defect.getProduct() != null && !defect.getProduct().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)))) {
 				defect.setProduct(product);
 			}
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			Project project = (Project) entityManagerDataSvc.getInstance().getReference(Project.class,  new Long((Integer) request.getParam(PMConstant.PROJECTID)));
-			if (defect.getProject() == null || defect.getProject() != null && !defect.getProject().getId().equals(new Long((Integer) request.getParam(PMConstant.PROJECTID)))) {
+			Project project = (Project) entityManagerDataSvc.getInstance().getReference(Project.class,  Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
+			if (defect.getProject() == null || defect.getProject() != null && !defect.getProject().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)))) {
 				defect.setProject(project);
 			}
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			Release release = (Release) entityManagerDataSvc.getInstance().getReference(Release.class,  new Long((Integer) request.getParam(PMConstant.RELEASEID)));
-			if (defect.getRelease() == null || defect.getRelease() != null && !defect.getRelease().getId().equals(new Long((Integer) request.getParam(PMConstant.RELEASEID)))) {
+			Release release = (Release) entityManagerDataSvc.getInstance().getReference(Release.class,  Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
+			if (defect.getRelease() == null || defect.getRelease() != null && !defect.getRelease().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)))) {
 				defect.setRelease(release);
 			}
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			Backlog backlog = (Backlog) entityManagerDataSvc.getInstance().getReference(Backlog.class,  new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
-			if (defect.getBacklog() == null || defect.getBacklog() != null && !defect.getBacklog().getId().equals(new Long((Integer) request.getParam(PMConstant.BACKLOGID)))) {
+			Backlog backlog = (Backlog) entityManagerDataSvc.getInstance().getReference(Backlog.class,  Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
+			if (defect.getBacklog() == null || defect.getBacklog() != null && !defect.getBacklog().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)))) {
 				defect.setBacklog(backlog);
 			}
 		} else if (request.containsParam(PMConstant.SPRINTID)) {
-			Sprint sprint = (Sprint) entityManagerDataSvc.getInstance().getReference(Sprint.class,  new Long((Integer) request.getParam(PMConstant.SPRINTID)));
-			if (defect.getSprint() == null || defect.getSprint() != null && !defect.getSprint().getId().equals(new Long((Integer) request.getParam(PMConstant.SPRINTID)))) {
+			Sprint sprint = (Sprint) entityManagerDataSvc.getInstance().getReference(Sprint.class,  Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)));
+			if (defect.getSprint() == null || defect.getSprint() != null && !defect.getSprint().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)))) {
 				defect.setSprint(sprint);
 			}
 		}
@@ -251,15 +251,15 @@ public class DefectDaoImpl implements DefectDao {
 			query.setParameter("assigneeId", (Long) request.getParam(PMConstant.ASSIGNEEID));
 		}
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			query.setParameter("productId", new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
+			query.setParameter("productId", Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			query.setParameter("projectId", new Long((Integer) request.getParam(PMConstant.PROJECTID)));
+			query.setParameter("projectId", Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			query.setParameter("releaseId", new Long((Integer) request.getParam(PMConstant.RELEASEID)));
+			query.setParameter("releaseId", Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			query.setParameter("backlogId", new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
+			query.setParameter("backlogId", Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
 		} else if (request.containsParam(PMConstant.SPRINTID)) {
-			query.setParameter("sprintId", new Long((Integer) request.getParam(PMConstant.SPRINTID)));
+			query.setParameter("sprintId", Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)));
 		}
 		
 		if (searchCriteria != null){
@@ -397,15 +397,15 @@ public class DefectDaoImpl implements DefectDao {
 			query.setParameter("assigneeId", (Long) request.getParam(PMConstant.ASSIGNEEID));
 		}
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			query.setParameter("productId", new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
+			query.setParameter("productId", Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			query.setParameter("projectId", new Long((Integer) request.getParam(PMConstant.PROJECTID)));
+			query.setParameter("projectId", Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			query.setParameter("releaseId", new Long((Integer) request.getParam(PMConstant.RELEASEID)));
+			query.setParameter("releaseId", Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			query.setParameter("backlogId", new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
+			query.setParameter("backlogId", Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
 		} else if (request.containsParam(PMConstant.SPRINTID)) {
-			query.setParameter("sprintId", new Long((Integer) request.getParam(PMConstant.SPRINTID)));
+			query.setParameter("sprintId", Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)));
 		}
 		
 		if (searchCriteria != null){
@@ -446,7 +446,7 @@ public class DefectDaoImpl implements DefectDao {
 			String queryStr = "SELECT x FROM Defect AS x WHERE x.id =:id";
 			Query query = entityManagerDataSvc.getInstance().createQuery(queryStr);
 		
-			query.setParameter("id", new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
+			query.setParameter("id", Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
 			Defect defect = (Defect) query.getSingleResult();
 			
 			response.addParam(GlobalConstant.ITEM, defect);
