@@ -56,7 +56,7 @@ public class EnhancementDaoImpl implements EnhancementDao {
 	public void delete(RestRequest request, RestResponse response) throws Exception {
 		if (request.containsParam(GlobalConstant.ITEMID) && !"".equals(request.getParam(GlobalConstant.ITEMID))) {
 			
-			Enhancement enhancement = (Enhancement) entityManagerDataSvc.getInstance().getReference(Enhancement.class,  new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
+			Enhancement enhancement = (Enhancement) entityManagerDataSvc.getInstance().getReference(Enhancement.class,  Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
 			entityManagerDataSvc.getInstance().remove(enhancement);
 			
 		} else {
@@ -69,28 +69,28 @@ public class EnhancementDaoImpl implements EnhancementDao {
 		Enhancement enhancement = (Enhancement) request.getParam(GlobalConstant.ITEM);
 		
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			Product product = (Product) entityManagerDataSvc.getInstance().getReference(Product.class,  new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
-			if (enhancement.getProduct() == null || enhancement.getProduct() != null && !enhancement.getProduct().getId().equals(new Long((Integer) request.getParam(PMConstant.PRODUCTID)))) {
+			Product product = (Product) entityManagerDataSvc.getInstance().getReference(Product.class,  Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
+			if (enhancement.getProduct() == null || enhancement.getProduct() != null && !enhancement.getProduct().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)))) {
 				enhancement.setProduct(product);
 			}
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			Project project = (Project) entityManagerDataSvc.getInstance().getReference(Project.class,  new Long((Integer) request.getParam(PMConstant.PROJECTID)));
-			if (enhancement.getProject() == null || enhancement.getProject() != null && !enhancement.getProject().getId().equals(new Long((Integer) request.getParam(PMConstant.PROJECTID)))) {
+			Project project = (Project) entityManagerDataSvc.getInstance().getReference(Project.class,  Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
+			if (enhancement.getProject() == null || enhancement.getProject() != null && !enhancement.getProject().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)))) {
 				enhancement.setProject(project);
 			}
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			Release release = (Release) entityManagerDataSvc.getInstance().getReference(Release.class,  new Long((Integer) request.getParam(PMConstant.RELEASEID)));
-			if (enhancement.getRelease() == null || enhancement.getRelease() != null && !enhancement.getRelease().getId().equals(new Long((Integer) request.getParam(PMConstant.RELEASEID)))) {
+			Release release = (Release) entityManagerDataSvc.getInstance().getReference(Release.class,  Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
+			if (enhancement.getRelease() == null || enhancement.getRelease() != null && !enhancement.getRelease().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)))) {
 				enhancement.setRelease(release);
 			}
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			Backlog backlog = (Backlog) entityManagerDataSvc.getInstance().getReference(Backlog.class,  new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
-			if (enhancement.getBacklog() == null || enhancement.getBacklog() != null && !enhancement.getBacklog().getId().equals(new Long((Integer) request.getParam(PMConstant.BACKLOGID)))) {
+			Backlog backlog = (Backlog) entityManagerDataSvc.getInstance().getReference(Backlog.class,  Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
+			if (enhancement.getBacklog() == null || enhancement.getBacklog() != null && !enhancement.getBacklog().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)))) {
 				enhancement.setBacklog(backlog);
 			}
 		} else if (request.containsParam(PMConstant.SPRINTID)) {
-			Sprint sprint = (Sprint) entityManagerDataSvc.getInstance().getReference(Sprint.class,  new Long((Integer) request.getParam(PMConstant.SPRINTID)));
-			if (enhancement.getSprint() == null || enhancement.getSprint() != null && !enhancement.getSprint().getId().equals(new Long((Integer) request.getParam(PMConstant.SPRINTID)))) {
+			Sprint sprint = (Sprint) entityManagerDataSvc.getInstance().getReference(Sprint.class,  Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)));
+			if (enhancement.getSprint() == null || enhancement.getSprint() != null && !enhancement.getSprint().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)))) {
 				enhancement.setSprint(sprint);
 			}
 		}
@@ -243,15 +243,15 @@ public class EnhancementDaoImpl implements EnhancementDao {
 			query.setParameter("active", (Boolean) request.getParam(GlobalConstant.ACTIVE));
 		} 
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			query.setParameter("productId", new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
+			query.setParameter("productId", Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			query.setParameter("projectId", new Long((Integer) request.getParam(PMConstant.PROJECTID)));
+			query.setParameter("projectId", Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			query.setParameter("releaseId", new Long((Integer) request.getParam(PMConstant.RELEASEID)));
+			query.setParameter("releaseId", Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			query.setParameter("backlogId", new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
+			query.setParameter("backlogId", Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
 		} else if (request.containsParam(PMConstant.SPRINTID)) {
-			query.setParameter("sprintId", new Long((Integer) request.getParam(PMConstant.SPRINTID)));
+			query.setParameter("sprintId", Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)));
 		}
 		
 		if (searchCriteria != null){
@@ -382,15 +382,15 @@ public class EnhancementDaoImpl implements EnhancementDao {
 			query.setParameter("active", (Boolean) request.getParam(GlobalConstant.ACTIVE));
 		} 
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			query.setParameter("productId", new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
+			query.setParameter("productId", Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			query.setParameter("projectId", new Long((Integer) request.getParam(PMConstant.PROJECTID)));
+			query.setParameter("projectId", Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			query.setParameter("releaseId", new Long((Integer) request.getParam(PMConstant.RELEASEID)));
+			query.setParameter("releaseId", Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			query.setParameter("backlogId", new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
+			query.setParameter("backlogId", Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
 		} else if (request.containsParam(PMConstant.SPRINTID)) {
-			query.setParameter("sprintId", new Long((Integer) request.getParam(PMConstant.SPRINTID)));
+			query.setParameter("sprintId", Long.valueOf((Integer) request.getParam(PMConstant.SPRINTID)));
 		}
 		
 		if (searchCriteria != null){
@@ -431,7 +431,7 @@ public class EnhancementDaoImpl implements EnhancementDao {
 			String queryStr = "SELECT x FROM Enhancement AS x WHERE x.id =:id";
 			Query query = entityManagerDataSvc.getInstance().createQuery(queryStr);
 		
-			query.setParameter("id", new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
+			query.setParameter("id", Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
 			Enhancement enhancement = (Enhancement) query.getSingleResult();
 			
 			response.addParam(GlobalConstant.ITEM, enhancement);
