@@ -55,7 +55,7 @@ public class ScrumDaoImpl implements ScrumDao {
 	public void delete(RestRequest request, RestResponse response) throws Exception {
 		if (request.containsParam(GlobalConstant.ITEMID) && !"".equals(request.getParam(GlobalConstant.ITEMID))) {
 			
-			Scrum scrum = (Scrum) entityManagerDataSvc.getInstance().getReference(Scrum.class,  new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
+			Scrum scrum = (Scrum) entityManagerDataSvc.getInstance().getReference(Scrum.class,  Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
 			entityManagerDataSvc.getInstance().remove(scrum);
 			
 		} else {
@@ -67,23 +67,23 @@ public class ScrumDaoImpl implements ScrumDao {
 	public void save(RestRequest request, RestResponse response) throws Exception {
 		Scrum scrum = (Scrum) request.getParam(GlobalConstant.ITEM);
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			Product product = (Product) entityManagerDataSvc.getInstance().getReference(Product.class,  new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
-			if (scrum.getProduct() == null || scrum.getProduct() != null && !scrum.getProduct().getId().equals(new Long((Integer) request.getParam(PMConstant.PRODUCTID)))) {
+			Product product = (Product) entityManagerDataSvc.getInstance().getReference(Product.class,  Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
+			if (scrum.getProduct() == null || scrum.getProduct() != null && !scrum.getProduct().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)))) {
 				scrum.setProduct(product);
 			}
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			Project project = (Project) entityManagerDataSvc.getInstance().getReference(Project.class,  new Long((Integer) request.getParam(PMConstant.PROJECTID)));
-			if (scrum.getProject() == null || scrum.getProject() != null && !scrum.getProject().getId().equals(new Long((Integer) request.getParam(PMConstant.PROJECTID)))) {
+			Project project = (Project) entityManagerDataSvc.getInstance().getReference(Project.class,  Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
+			if (scrum.getProject() == null || scrum.getProject() != null && !scrum.getProject().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)))) {
 				scrum.setProject(project);
 			}
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			Backlog backlog = (Backlog) entityManagerDataSvc.getInstance().getReference(Backlog.class,  new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
-			if (scrum.getBacklog() == null || scrum.getBacklog() != null && !scrum.getBacklog().getId().equals(new Long((Integer) request.getParam(PMConstant.BACKLOGID)))) {
+			Backlog backlog = (Backlog) entityManagerDataSvc.getInstance().getReference(Backlog.class,  Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
+			if (scrum.getBacklog() == null || scrum.getBacklog() != null && !scrum.getBacklog().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)))) {
 				scrum.setBacklog(backlog);
 			}
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			Release release = (Release) entityManagerDataSvc.getInstance().getReference(Release.class,  new Long((Integer) request.getParam(PMConstant.RELEASEID)));
-			if (scrum.getRelease() == null || scrum.getRelease() != null && !scrum.getRelease().getId().equals(new Long((Integer) request.getParam(PMConstant.RELEASEID)))) {
+			Release release = (Release) entityManagerDataSvc.getInstance().getReference(Release.class,  Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
+			if (scrum.getRelease() == null || scrum.getRelease() != null && !scrum.getRelease().getId().equals(Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)))) {
 				scrum.setRelease(release);
 			}
 		}
@@ -222,13 +222,13 @@ public class ScrumDaoImpl implements ScrumDao {
 			query.setParameter("active", (Boolean) request.getParam(GlobalConstant.ACTIVE));
 		} 
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			query.setParameter("productId", new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
+			query.setParameter("productId", Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			query.setParameter("projectId", new Long((Integer) request.getParam(PMConstant.PROJECTID)));
+			query.setParameter("projectId", Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			query.setParameter("backlogId", new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
+			query.setParameter("backlogId", Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			query.setParameter("releaseId", new Long((Integer) request.getParam(PMConstant.RELEASEID)));
+			query.setParameter("releaseId", Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
 		}
 	
 		if (searchCriteria != null){
@@ -348,13 +348,13 @@ public class ScrumDaoImpl implements ScrumDao {
 			query.setParameter("active", (Boolean) request.getParam(GlobalConstant.ACTIVE));
 		} 
 		if (request.containsParam(PMConstant.PRODUCTID)) {
-			query.setParameter("productId", new Long((Integer) request.getParam(PMConstant.PRODUCTID)));
+			query.setParameter("productId", Long.valueOf((Integer) request.getParam(PMConstant.PRODUCTID)));
 		} else if (request.containsParam(PMConstant.PROJECTID)) {
-			query.setParameter("projectId", new Long((Integer) request.getParam(PMConstant.PROJECTID)));
+			query.setParameter("projectId", Long.valueOf((Integer) request.getParam(PMConstant.PROJECTID)));
 		} else if (request.containsParam(PMConstant.BACKLOGID)) {
-			query.setParameter("backlogId", new Long((Integer) request.getParam(PMConstant.BACKLOGID)));
+			query.setParameter("backlogId", Long.valueOf((Integer) request.getParam(PMConstant.BACKLOGID)));
 		} else if (request.containsParam(PMConstant.RELEASEID)) {
-			query.setParameter("releaseId", new Long((Integer) request.getParam(PMConstant.RELEASEID)));
+			query.setParameter("releaseId", Long.valueOf((Integer) request.getParam(PMConstant.RELEASEID)));
 		}
 		
 		if (searchCriteria != null){
@@ -394,7 +394,7 @@ public class ScrumDaoImpl implements ScrumDao {
 			String queryStr = "SELECT x FROM Scrum AS x WHERE x.id =:id";
 			Query query = entityManagerDataSvc.getInstance().createQuery(queryStr);
 		
-			query.setParameter("id", new Long((Integer) request.getParam(GlobalConstant.ITEMID)));
+			query.setParameter("id", Long.valueOf((Integer) request.getParam(GlobalConstant.ITEMID)));
 			Scrum scrum = (Scrum) query.getSingleResult();
 			
 			response.addParam(GlobalConstant.ITEM, scrum);
